# llm-few-shot-store

./: README.md  pyproject.toml
src/llm_few_shot_store/: __init__.py  core.py
tests/: test_llm_few_shot_store.py
